--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav>
             <div class="logo">
                 
-                <h1 class="animate__animated animate__bounce">mera bharat</h1>
+                <h1 class="animate__animated animate__bounce">incredible India</h1>
                 <h6>just explore the world...</h6>
             </div>
             <div class="menu">
@@ -44,9 +44,69 @@
                 <a href="#" class="btntwo">signup here</a>
             </section>
         </main>
+<BR>
+    <div id="1">
+        <h1> THE SEVEN WONDERS OF INDIA</h1>
+        <p>Without a doubt the sub continent of India showcases life in different hues with royal history, diverse cultures, rich heritage, and so on. The magic attracts the tourists from around the country and the world to find the best wonders in the world</p>
+        <BR>
+<H3>1.TAJ MAHAL</H3> <BR>
+        <img src="./imagesss/Taj_Mahal_Agra-1024x673.jpeg" alt="">
 
 
+        <BR>
 
+<P>This ivory white marble structure that symbolizes love of the Emperor Shah Jehan to his beloved third wife – Mumtaz Mahal is one of the biggest monument mausoleum constructed in sixteenth century. It took over two decades and 20,000 talented artisans and lot of money to complete this massive structure including marble stone and other precious stones, gardens, etc. The Taj Mahal changes colors during the day as the sun light changes from morning to evening. There are also a lot of workshops, melas, and a museum in the complex. The Taj Mahal is also one of the Seven Wonders of the World.
+
+    Famous for  The Taj Mahal is special for several views that makes it so famous. Sunrise View, Boat Ride During Sunset View, Full Moon View, Changing Hues With Light Variations, Slanted Minarets, etc.</P>
+
+<BR>
+    <H3>
+        2.GOMATESWARA STATUE
+</H3>
+<br>
+<img src="./imagesss/Gomateshwara.jpg" alt=""><br>
+<p>This massive statue that measures 57 feet in height is carved from a single rock stone. This is situated at Shravanabelagola, Karnataka dating back to 983 AD dedicated to Bahubali, the Jain God. Close to 1/2 of total number of votes went for this massive statue which is the tallest free – standing statues in the world.
+
+    This tops the list for 7 wonders in India and is located in Hassan in Karnataka state that houses a UNESCO World Heritage Site temple city of ruins called Hampi.</p><br>
+<h3>3.Hampi</h3>
+<br>
+<img src="./imagesss/Hampi-1024x683.jpg" alt="">
+
+<br>
+<p>This massive temple town is known as a famous tourist destination in South India. As mentioned earlier these ruins are recognized as UNESCO World Heritage Site. Some of the structures date back to early 13th century and being to the great Vijayanagara Empire. There are other names that this temple town in Karnataka goes by – Bhaskara Kshetra, Pampa Kshetra, and Kishkinda Kshetra. It is a massive spread of structures and ruins across large landscape and villages. Walk through the village houses around and search for 100+ structures around the area.</p>
+
+<br>
+<h3>4.GOLDEN TEMPLE OF AMRITSAR
+
+</h3>
+<br>
+<img src="./imagesss/Harmandir-Sahib-Golden-Temple-1024x674.jpg" alt="">
+<br>
+<p>This famous Sri Harmandir Sahib is visited by pilgrims from around the world. Situated in the Punjab state in Amritsar city, the famous golden temple hosts the “Throne of the Timeless One”. It is open to visitors of all religions and volunteers at the temple. It is famous for the golden domes and gold covering in the upper floors. It is built on a man-made water body and is excellent when illumined. There are nearly 1 lakh visitors on a daily basis.</p>
+<br>
+<h3>5.KONARK SUN TEMPLE OF ORISSA</h3>
+<br>
+<img src="./imagesss/Konark-Sun-Temple-1024x683.jpg" alt=""><br>
+<p>This Kalinga style ancient temple dating back to the thirteenth century is famous all over India for several reasons. This Sun Temple is situated at Konark coastal region of Odisha. There is sculptures on the walls and stunning artistry found in the stone marvel constructed by King Narasimhadeva – I from Ganga Dynasty. There is also a massive structure of three depictions of Sun God statues and seven horses pulling 12 wheels. Konark literally translates to Sun and so it is called Sun Temple locally.</p>
+<br>
+<h3>6.NALANDA UNIVERSITY OF BIHAR</h3>
+
+<br>
+<img src="./imagesss/Nalanda.jpg" alt="">
+<br>
+<p>This Buddhist monastery and learning center for spiritual studies dates back to the seventh century. The ancient Mahavihara was the famed learning center during the time of 7th century AD to 12th century AD and is known as one of the earliest education centers or universities in the world. During that time, visitors and scholars from around the world came here for very organized teaching method of vedic study.
+
+    Scholars came from Central Asia, Persia, Tibet, and even china to learn here. before being totally destroyed the learning</p>
+    <br>
+    <h3>7.KHAJURAHO GROUP OF MONUMENTS</h3>
+    <br>
+    <img src="./imagesss/Khajuraho-1024x683.jpg" alt="">
+<br>
+<p>This collection of several monuments including Hindu and Jain Temples is recognized as UNESCO World Heritage Site. These monuments were constructed between 950 - 1050 CE in Nagara architectural style during the Chandeyla Dynasty. However, by records during twelvth century there were 85 structures from which only 20 structures are still preserved. These group of monuments famous all over the world for the erotic sculptures is situated in Chattarpur district of state of Madhya Pradesh.
+
+    Famous for  The Indian Classical music and visuals regarding the Chandela Dynasty displayed in the Sound and Lights Show set in the backdrop of Kajuraho temples amidst floodlights in various colors.</p>
+    <br>
+</div>
 
     </header>
 
